# sinon

./: .editorconfig  .gitignore  CLAUDE.md  README.md
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.claude/skills/: agent-authoring  command-authoring  plugin-authoring  skill-authoring
.claude/skills/skill-authoring/: SKILL.md
plugins/agent-capability-kit/: README.md
plugins/agent-capability-kit/.claude-plugin/: plugin.json
plugins/agent-capability-kit/.codex-plugin/: plugin.json
plugins/git-workflow/: .gitignore  LICENSE  README.md
plugins/git-workflow/.claude-plugin/: plugin.json
plugins/git-workflow/.codex-plugin/: plugin.json
plugins/harness-engineering/: README.md
plugins/harness-engineering/.claude-plugin/: plugin.json
plugins/harness-engineering/.codex-plugin/: plugin.json
plugins/harness-engineering/agents/: architecture-guard.md  code-reviewer.md  doc-gardener.md  e2e-driver.md  spec-writer.md
plugins/java/: .lsp.json  README.md
plugins/java/.claude-plugin/: plugin.json
plugins/jdk/: README.md
plugins/jvm/: .markdownlint.jsonc  README.md
plugins/kotlin/: .lsp.json  README.md
plugins/netty/: .gitignore  .markdownlint.jsonc  LICENSE  README.md
plugins/observability-assets/: README.md
plugins/reactor/: README.md
plugins/spec-driven-development/: README.md
plugins/spec-driven-development/skills/spec-driven-development/scripts/: pyproject.toml  sdd.sh
plugins/spec-driven-development/skills/spec-driven-development/scripts/sdd/: __init__.py  cli.py
plugins/spring/: CLAUDE.md  README.md
(+578 files in other folders)
