[project]
name = "sdd-cli"
version = "0.1.0"
description = "Spec-Driven Development CLI tools"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.20",
]

[project.scripts]
sdd = "sdd.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["sdd"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
